<resources>
    <string name="app_name">triCrypto</string>
    <string name="version_by_ss">v%1$s, made by Spudg Studios</string>
    <string name="back">Back</string>
    <string name="about_tricrypto">About triCrypto</string>
    <string name="tricryptologo">triCryptoLogo</string>
    <string name="tricrypto">triCrypto</string>
    <string name="triCryptoDesc">triCrypto is a simple practice portfolio tracker for people who want to try out the world of crypto before investing real money. \n\nSpudg Studios is currently a one-man development studio and this is an early version of the application, so if you have any suggestions for new features that could be added or you\'ve found a bug, please send an email below!</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="rate_on_play_store">Rate on Play Store</string>
    <string name="send_an_email">Send an email</string>
    <string name="portfolio">Portfolio</string>
    <string name="market">Market</string>
    <string name="more">More</string>
    <string name="logo">Logo</string>
    <string name="btc">BTC</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="_79_022_93">$79,022.93</string>
    <string name="_1_29">1.29%</string>
    <string name="_1_928_33">$1,928.33</string>
    <string name="_7d">7d</string>
    <string name="_1m">1m</string>
    <string name="_1y">1y</string>
    <string name="_5y">5y</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="your_btc_holdings">Your BTC holdings</string>
    <string name="value_1_502_33">Value: $1,502.33</string>
    <string name="_16_4">+16.4%</string>
    <string name="amount_0_19232">Amount: 0.19232</string>
    <string name="cost_1_439_33">Cost: $1,439.33</string>
    <string name="high_24h">High (24h)</string>
    <string name="_241_231_22">$241,231.22</string>
    <string name="low_24h">Low (24h)</string>
    <string name="_231_441_09">$231,441.09</string>
    <string name="volume">Volume</string>
    <string name="_61_499_231_441_09">$61,499,231,441.09</string>
    <string name="market_cap">Market cap</string>
    <string name="_420_333_212_423">$420,333,212,423</string>
    <string name="fully_diluted_market_cap">Fully diluted market cap</string>
    <string name="_918_283_231">$918,283,231</string>
    <string name="market_cap_rank">Market cap rank</string>
    <string name="_13">13</string>
    <string name="circulating_supply">Circulating supply</string>
    <string name="_18_692_300">18,692,300</string>
    <string name="max_supply">Max supply</string>
    <string name="_21_000_000">21,000,000</string>
    <string name="total_supply">Total supply</string>
    <string name="all_time_high">All-time high</string>
    <string name="_9_941_231_22">$9,941,231.22</string>
    <string name="date_of_all_time_high">Date of all-time high</string>
    <string name="_5_october_2024">5 October 2024</string>
    <string name="all_time_low">All-time low</string>
    <string name="_0_22">$0.22</string>
    <string name="date_of_all_time_low">Date of all-time low</string>
    <string name="_2_october_2023">2 October 2023</string>
    <string name="portfolio_512_242_66">Portfolio - $512,242.66</string>
    <string name="_3_425_61">+3,425.61%</string>
    <string name="crypto_value_512_326_33">Crypto value: $512,326.33</string>
    <string name="cash_value_6_33">Cash value: $6.33</string>
    <string name="no_holdings_text">No crypto holdings yet. Head over to the market tab to purchase your first.</string>
    <string name="market_data">Market data</string>
    <string name="refresh">Refresh</string>
    <string name="tap_any_to_view_detail">Tap any to view detail</string>
    <string name="_0_09">0.09%</string>
    <string name="buy_dollar">Buy $</string>
    <string name="amount">amount</string>
    <string name="of_btc">of BTC</string>
    <string name="available_cash_1_293_22">Available cash: $1,293.22</string>
    <string name="cancel">Cancel</string>
    <string name="sell_dollar">Sell $</string>
    <string name="current_holding_value_1_293_22">Current holding value: $1,293.22</string>
    <string name="sell_all">Sell All</string>
    <string name="copyright_2021_spudg_studio">Copyright © 2021 Spudg Studio</string>
    <string name="all_rights_reserved">All rights reserved. By using this application, you agree that the creator of this application is not responsible for any losses or damages.</string>
    <string name="financial_advice_disclaimer">No content in this app should be interpreted as financial advice. Cryptocurrency is in it\'s early stages and is still very volatile and risky. Consult a qualified financial advisor for investment advice.</string>
    <string name="powered_by_coingecko_api">This application is powered by the CoinGecko API.</string>
    <string name="philjay_mpandroidchart">PhilJay/MPAndroidChart</string>
    <string name="licensed_under_the_apache_license_2_0">Licensed under the Apache License 2.0</string>
    <string name="google_material_design_icons">google/material-design-icons</string>
    <string name="steve_matteson_open_sans_light_font">Steve Matteson / Open Sans Light font</string>
    <string name="done">Done</string>
    <string name="_1_btc_507_325_33">1 BTC = $507,325.33</string>
    <string name="_45_4">+ 45.4%</string>
    <string name="cost_3_982">Cost = $3,982</string>
    <string name="about">About</string>
    <string name="holding_title">Your %1$s holdings</string>
    <string name="value_figure">Value: %1$s</string>
    <string name="amount_figure">Amount: %1$s</string>
    <string name="cost_figure">Cost: %1$s</string>
    <string name="of_symbol">of %1$s</string>
    <string name="current_holding_value_figure">Current holding value: %1$s</string>
    <string name="available_cash_figure">Available cash: %1$s</string>
    <string name="unlimited">Unlimited</string>
    <string name="name_symbol">%1$s %2$s</string>
    <string name="portfolio_value">Portfolio - %1$s</string>
    <string name="crypto_value">Crypto - %1$s</string>
    <string name="cash_value">Cash - %1$s</string>
</resources>